[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[workspace]
members = ["crates/*"]

[dependencies]
flutter_rust_bridge = "1"
as_any = { path = "crates/as_any" }
itertools = "0.11.0"
